# protologic-tool-c_cpp

./: .gitignore  CMakeLists.txt  build.sh  readme.md
include/protologic/: MainState.h  PackedQuaternion.h  PackedVector3.h  QS_GunData.h  RadarContactInfo.h  _MainState.h  _import.h  actions.h  constants.h  protologic.h  queries.h  wasi.h
src/: main.cpp
